--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "heroku local -f Procfile.dev",
+    "start": "echo 'Use `docker-compose up` to start the server.'",
     "build": "NODE_ENV=production webpack -p --json > server/stats.json",
     "lint": "eslint client && eslint server",
     "test": "jest"
