Add build scripts

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "private": true,
   "scripts": {
     "start": "echo 'Use `docker-compose up` to start the server.'",
-    "build": "NODE_ENV=production webpack -p --json > server/stats.json",
+    "build-client": "NODE_ENV=production webpack -p --json > server/stats.json",
+    "build-app": "yarn build-client && docker build -t gcr.io/unpkg-server/app -f Dockerfile.app .",
+    "build-logs": "docker build -t gcr.io/unpkg-server/logs -f Dockerfile.logs .",
     "lint": "eslint client && eslint server",
     "test": "jest"
   },
