Do not build on image; slimmer images

--- a/Dockerfile.logs
+++ b/Dockerfile.logs
@@ -1,7 +1,7 @@
 FROM node:8
 
 COPY package.json yarn.lock ./
-RUN yarn --pure-lockfile
+RUN yarn --production --pure-lockfile
 COPY . .
 
 CMD ["node", "server/ingestLogs.js"]
