--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "start": "echo 'Use `docker-compose up` to start the server.'",
     "clean": "rm -rf public/_assets server/stats.json",
     "build-client": "NODE_ENV=production webpack -p --json > server/stats.json",
-    "build-app": "yarn build-client && docker build -t gcr.io/unpkg-server/app -f Dockerfile.app .",
-    "build-logs": "docker build -t gcr.io/unpkg-server/logs -f Dockerfile.logs .",
+    "build-app": "yarn build-client && docker build -t gcr.io/unpkg-server/app:latest -f Dockerfile.app .",
+    "build-logs": "docker build -t gcr.io/unpkg-server/logs:latest -f Dockerfile.logs .",
     "lint": "eslint client && eslint server",
     "test": "jest"
   },
